# feynmanV2

./: .gitignore  Cargo.toml  docker-compose.yaml  orval.config.ts  package.json  pnpm-lock.yaml
apps/web/: package.json
apps/web/app/: root.tsx  routes.ts
apps/web/app/hooks/: use-voice-recorder.ts
apps/web/app/layouts/: app-shell.tsx  session-layout.tsx
apps/web/app/lib/: audio-player.ts  axios.ts  feynman-client.tsx
apps/web/app/providers/: feynman-provider.tsx
apps/web/public/: audio-processor.js
crates/core/: Cargo.toml
crates/core/src/: agent.rs  curriculum.rs  generic_types.rs  lib.rs  llm_client.rs  realtime_api.rs  topic.rs
services/api/: Cargo.toml  openapi.json
services/api/.sqlx/: query-5428c2bdc3cc9d92a3694bc9b6515985e26faa7d5894acab1b9b57e5c8f7df56.json  query-60a50169bc824b47b66c3635bc7d32c84b1516aea5f24054d9ece9a926730704.json  query-616e0644f782a626876cc2d25cc7a2356a69b52192dbe09f4dd20e50324b500e.json  query-7abcdbc0ed353beeb40783547a2683cf4a96c44da7acb57df2ada4590663fcf9.json  query-80cc0172e5fa8fba7d67d141d9ae5b94cb97265e9fa490ccbd94d9adb4553f71.json  query-a304d00256107f65248f12898e7f022471953b16abf5787e6b6dbfb9bf63a9aa.json  query-b7e7cb08788c52c1e94b2a267fb27b5cc0bba8d848ca803d52592772c5be45c5.json
services/api/migrations/: 20250809043038_initial_schema.sql
services/api/prompts/: system_prompt.md
services/api/src/: audio_utils.rs  config.rs  db.rs  handlers.rs  lib.rs  models.rs  router.rs  state.rs
services/api/src/ws/: cycle.rs  mod.rs  protocol.rs  session.rs
services/api/src/ws/provider/: gemini.rs  mod.rs  openai.rs
(+9 files in other folders)
