[package]
name = "feynman-api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "openapi"
path = "bin/openapi.rs"
test = false
bench = false

[[bin]]
name = "api"
path = "bin/api.rs"
test = false
bench = false

[dependencies]
feynman-core = { path = "../../crates/core" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "chrono"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
rmcp = { workspace = true, features = ["client", "server"] }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }

axum = { version = "0.8.4", features = ["ws"] }
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-native-roots"] }
bytes = "1.10.1"
async-openai = { version = "0.29.0", features = ["realtime"] }
rand = "0.9.2"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
    "migrate"
]}
utoipa = { version="5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version="9.0.2", features=["axum"] }
chrono = "0.4.41"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
futures-util = "0.3.31"
yoke = "0.8.0"
base64 = "0.22.1"
rubato = "0.16.2"

[dev-dependencies]
approx = "0.5.1"
serial_test = "3.2.0"